# everythingsings.github.io

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml
.github/workflows/: deploy.yml
public/: feed.xml  llms.txt  robots.txt  site.webmanifest  sitemap.xml
public/js/: shader-bg.js
public/shaders/: aurora.glsl  common.glsl  fbm.glsl  flow.glsl  matrix.glsl  neural.glsl  plasma.glsl  ripple.glsl  smoke.glsl  spiral.glsl  voronoi.glsl  waves.glsl
public/story/: index.html
src/: app.rs  art.rs  lib.rs  main.rs
src/components/: art_index.rs  art_series.rs  head.rs  link_list.rs  mod.rs  nav.rs  profile_card.rs  sigil.rs
style/: main.css
