[package]
name = "everythingsings"
version = "0.1.0"
edition = "2021"
description = "AI-accessible landing page for EverythingSings.art"
license = "MIT"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "everythingsings"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["ssr"] }
leptos_meta = "0.7"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[features]
default = []
ssr = ["leptos/ssr"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

# Metadata for tooling (project uses custom SSG binary, not cargo-leptos)
[package.metadata.leptos]
bin-target = "everythingsings"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
style-file = "style/main.css"
browserquery = "defaults"
watch = false
env = "DEV"
lib-features = []
bin-features = ["ssr"]
hash-files = false
